--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -8,8 +8,8 @@ image_description: Banner for the executive edition of Skylight’s Digital IT A
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
 preload: hero-training-single.svg
-class_1_spots: 23
-class_2_spots: 23
+class_1_spots:
+class_2_spots:
 ---
 
 <div
