Update service design page

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -7,7 +7,7 @@ image: /img/ditap/ditap-banner.png
 image_description: People designing a complex service.
 tags: [service design]
 class: ditap page-service-design
-preload: hero.svg
+preload: hero-service-design.svg
 ---
 
 <div
@@ -127,10 +127,11 @@ preload: hero.svg
           them.
         </p>
         <img
-          class="img-fluid"
+          class="img-fluid mt-5"
           src="/img/service_design/skylight-service-design-framework-descriptions.svg"
           alt="The Skylight Service Design Framework."
         />
+        <p class="caption mt-0">Skylight Service Design Framework</p>
         <h2 class="margin-heading" id="case-studies">Case studies</h2>
         <div class="blog-posts-row mx-0">
           <article>
@@ -236,28 +237,22 @@ preload: hero.svg
         <h2 class="margin-heading" id="how-to-engage-with-us">
           How to engage with us
         </h2>
-        <div class="row">
-          <div class="col-sm-4 col-md-4">
-            <img
-              class="img-fluid mt-sm-2 mb-3"
-              src="/img/service_design/people-high-fiving.svg"
-              alt="Two people effortlessly high-fiving."
-            />
-          </div>
-          <div class="col-sm-6 col-md-8">
-            <p>
-              The best way to contract with Skylight is through the federal
-              government’s Small Business Innovation Research (SBIR) / Small
-              Business Technology Transfer (STTR) program.
-            </p>
-            <p>
-              Through this program, the U.S. Air Force awarded Skylight a series of
-              STTR contracts related to service design. Any government agency can
-              leverage these contracts to issue direct (or non-competitive) awards —
-              without dollar, time, or size standard restrictions.
-            </p>
-          </div>
-        </div>
+        <img
+          class="img--engage img-fluid mt-sm-2 mb-3 mb-sm-0"
+          src="/img/service_design/people-high-fiving.svg"
+          alt="Two people effortlessly high-fiving."
+        />
+        <p>
+          The best way to contract with Skylight is through the federal
+          government’s Small Business Innovation Research (SBIR) / Small
+          Business Technology Transfer (STTR) program.
+        </p>
+        <p>
+          Through this program, the U.S. Air Force awarded Skylight a series of
+          STTR contracts related to service design. Any government agency can
+          leverage these contracts to issue direct (or non-competitive) awards —
+          without dollar, time, or size standard restrictions.
+        </p>
         <p>
           For more information on how to work with Skylight through the
           SBIR/STTR program,
