Make sure SD hero displays on mobile

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -21,7 +21,7 @@ preload: hero-service-design.svg
   <div class="hero">
     <div class="hero-container grid-container">
       <div class="">
-        <div class="text-center">
+        <div class="text-center my-5">
           <h1 class="text-white">
             Service design: <br class="linebreak">Transforming user experiences
           </h1>
@@ -30,7 +30,7 @@ preload: hero-service-design.svg
             you use it to deliver greater public value.
           </p>
           <a
-            class="text-white d-block mt-1"
+            class="text-white d-inline-block mt-1"
             href="#why-service-design"
             role="button"
           >
