Adjust sd headings

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -69,7 +69,7 @@ preload: hero-service-design.svg
 
     <div class="col-12 col-md-9 text">
       <div class="mt-5">
-        <h2 class="margin-heading" id="why-service-design">
+        <h2 class="sd__heading" id="why-service-design">
           Why service design?
         </h2>
         <p>
@@ -112,7 +112,7 @@ preload: hero-service-design.svg
           cite_name = "Eero Saarinen"
           cite_title = "Architect"
         %}
-        <h2 class="margin-heading" id="how-we-work">How we work</h2>
+        <h2 class="sd__heading" id="how-we-work">How we work</h2>
         <p>
           Our goal is to help you embed service design ways of thinking and
           working throughout your entire organization. To accomplish that, our
@@ -132,7 +132,7 @@ preload: hero-service-design.svg
           alt="The Skylight Service Design Framework."
         />
         <p class="caption mt-0">Skylight Service Design Framework</p>
-        <h2 class="margin-heading" id="case-studies">Case studies</h2>
+        <h2 class="sd__heading" id="case-studies">Case studies</h2>
         <div class="blog-posts-row mx-0">
           <article>
             <div
@@ -234,7 +234,7 @@ preload: hero-service-design.svg
             </div>
           </article>
         </div>
-        <h2 class="margin-heading" id="how-to-engage-with-us">
+        <h2 class="sd__heading" id="how-to-engage-with-us">
           How to engage with us
         </h2>
         <img
