--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -131,7 +131,7 @@ preload: hero-service-design.svg
           src="/img/service_design/skylight-service-design-framework-descriptions.svg"
           alt="The Skylight Service Design Framework."
         />
-        <p class="caption mt-0">Skylight Service Design Framework</p>
+        <p class="caption my-0">Skylight Service Design Framework</p>
         <h2 class="sd__heading" id="case-studies">Case studies</h2>
         <div class="blog-posts-row mx-0">
           <article>
