--- a/pages/training.html
+++ b/pages/training.html
@@ -49,8 +49,8 @@ preload: hero-training.svg
               Executive Edition
             </h2>
             <p class="card-text blog-post-text">
-              Become a certified digial acquisition professional through our
-              expert-led, 6-month, part-time course.
+              Learn how to lead your agency into the world of modern procurement 
+              through a condensed, 1-day version of our 6-month DITAP program.
             </p>
           </div>
           <div class="blog-post-footer">
