--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -4,7 +4,7 @@ title: "Digital IT Acquisition Professional (DITAP) Training &mdash; Executive E
 permalink: /work/services/training/ditap-executive/
 excerpt: Learn how to transform the way your agency procures modern technology products and services through a condensed, 1-day version of our 6-month DITAP training program.
 image: /img/ditap_executive/ditap-executive-banner.png
-image_description: Banner for the executive edition of Skylight’s Digital IT Acquisition Professional Training course.
+image_description: Banner for the executive edition of Skylight’s Digital IT Acquisition Professional training course.
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
 preload: hero-training-single.svg
