--- a/_projects/ct_ece_reporter.html
+++ b/_projects/ct_ece_reporter.html
@@ -10,7 +10,7 @@ feature_image_description:
 feature_image_shadow:
 order: 3
 display: true
-tags: [service delivery, research & design, product management, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, security & privacy, early childhood, social safety net, healthcare, education, chris given, julia hogan, cailyn hansen, victoria suwardiman, ashley treni, abby raskin, kyle magida, marvo dolor, amelia wellers, olivia lucas, jordan guinn, nick bristow, brandon mader, derek tam, alex curtis]
+tags: [service delivery, research & design, product management, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, security & privacy, early childhood, social safety net, education, chris given, julia hogan, cailyn hansen, victoria suwardiman, ashley treni, abby raskin, kyle magida, marvo dolor, amelia wellers, olivia lucas, jordan guinn, nick bristow, brandon mader, derek tam, alex curtis]
 excerpt: A user-friendly data collection tool to get accurate information from early care and education providers about the children in their care in Connecticut.
 project_members:
   - jordan-guinn
