Rm text shadow from DITAP hero

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -28,7 +28,7 @@ class_2_spots:
     <div class="container-lg hero-container container-fluid">
       <div class="row">
         <div class="col-12 col-lg-7 mx-auto">
-          <h1 class="hero-heading text-shadow">
+          <h1 class="hero-heading">
             Digital IT Acquisition Professional (DITAP) Training
           </h1>
           <p class="hero-content text-shadow">
