--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -24,7 +24,7 @@ class_2_spots:
     <div class="container-lg hero-container container-fluid">
       <div class="row">
         <div class="col-12 col-lg-7 mx-auto">
-          <h1 class="hero-heading text-shadow">{{ page.title }}</h1>
+          <h1 class="hero-heading">{{ page.title }}</h1>
           <p class="hero-content text-shadow">{{ page.excerpt }}</p>
           <div class="hero-btn-group mt-2">
             <div class="hero-btn-wrapper pr-1">
