--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -120,18 +120,18 @@ preload: hero-service-design.svg
           pair with you to solve complex problems and build internal capacity
           using the Skylight Service Design Framework.
         </p>
-        <p>
-          Our framework draws on years of experience working on complex
-          government projects. It leverages best practices for building services
-          that work better for users and the government offices who administer
-          them.
-        </p>
         <img
           class="img-fluid mt-5"
           src="/img/service_design/skylight-service-design-framework-descriptions.svg"
           alt="The Skylight Service Design Framework."
         />
-        <p class="caption my-0">Skylight Service Design Framework</p>
+        <p class="caption mt-0 mb-5">Skylight Service Design Framework</p>
+        <p class="mb-0">
+          Our framework draws on years of experience working on complex
+          government projects. It leverages best practices for building services
+          that work better for users and the government offices who administer
+          them.
+        </p>
         <h2 class="sd__heading" id="case-studies">Case studies</h2>
         <div class="blog-posts-row mx-0">
           <article>
