Add space to Services headings on mobile

--- a/pages/services.html
+++ b/pages/services.html
@@ -42,7 +42,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
         </div>
       </div>
 
-      <div class="row mt-5 text">
+      <div class="row mt-4 mt-sm-5 text">
         <div class="col-sm-6">
           <h3>Ways we can help you:</h3>
           <ul class="">
@@ -102,7 +102,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
         </div>
       </div>
 
-      <div class="row mt-5 text">
+      <div class="row mt-4 mt-sm-5 text">
         <div class="col-sm-6">
           <h3>Ways we can help you:</h3>
           <ul>
@@ -160,7 +160,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
         </div>
       </div>
 
-      <div class="row mt-5 text">
+      <div class="row mt-4 mt-sm-5 text">
         <div class="col-sm-6">
           <h3>Ways we can help you:</h3>
           <ul>
@@ -224,7 +224,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
         </div>
       </div>
 
-      <div class="row mt-5 text">
+      <div class="row mt-4 mt-sm-5 text">
         <div class="col-sm-6">
           <h3>Ways we can help you:</h3>
           <ul>
@@ -292,7 +292,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
         </div>
       </div>
 
-      <div class="row mt-5 text">
+      <div class="row mt-4 mt-sm-5 text">
         <div class="col-sm-6">
           <h3>Ways we can help you:</h3>
           <ul>
