--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -46,13 +46,13 @@ pagination:
       >
         <div
           class="project-card card-link"
-          data-href="{{item.permalink}}"
+          data-href="{{item.permalink | prepend: site.baseurl }}"
           tabindex="-1"
         >
           <div
             role="img"
             class="project-img"
-            style="background-image: url({{item.image}});"
+            style="background-image: url({{item.image | prepend: site.baseurl}});"
             title="{{item.image_description}}"
           ></div>
           <div class="project-block">
@@ -63,7 +63,7 @@ pagination:
             <div class="card-text project-text">{{item.excerpt | markdownify}}</div>
           </div>
           <div class="project-footer">
-            <a href="{{item.permalink}}" tabindex="0">
+            <a href="{{item.permalink | prepend: site.baseurl }}" tabindex="0">
               <span>Read more</span
               ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
             </a>
