Change DITAP heading

--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -56,7 +56,7 @@ class_2_spots:
             <li><a class="nav-link" href="#curriculum">Curriculum</a></li>
             <li><a class="nav-link" href="#instructors">Instructors</a></li>
             <li>
-              <a class="nav-link" href="#tuition-and-dates">Dates and cost</a>
+              <a class="nav-link" href="#dates-and-cost">Dates and cost</a>
             </li>
             <li><a class="nav-link" href="#faqs">FAQs</a></li>
           </ul>
@@ -339,7 +339,7 @@ class_2_spots:
           </div>
         </div>
 
-        <h2 id="tuition-and-dates">Dates and cost</h2>
+        <h2 id="dates-and-cost">Dates and cost</h2>
         <a
           href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308"
           class="row tuition-card no-gutters mt-4"
