--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -75,8 +75,8 @@ class_2_spots:
             <li><a class="nav-link" href="#curriculum">Curriculum</a></li>
             <li><a class="nav-link" href="#instructors">Instructors</a></li>
             <li>
-              <a class="nav-link" href="#tuition-and-dates"
-                >Dates and tuition</a
+              <a class="nav-link" href="#dates-and-cost"
+                >Dates and cost</a
               >
             </li>
             <li><a class="nav-link" href="#faqs">FAQs</a></li>
@@ -368,7 +368,7 @@ class_2_spots:
           </div>
         </div>
 
-        <h2 id="tuition-and-dates">Dates and tuition</h2>
+        <h2 id="dates-and-cost">Dates and cost</h2>
         <a
           href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-148264871221"
           class="row tuition-card no-gutters mt-4"
