--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -36,7 +36,7 @@ pagination:
 {% include hanging_column_size.html collection_size = collection_size col_size = 3 %}
 
 <div class="our-experience">
-  <div class="projects grid-container maxw-2xl">
+  <div class="projects grid-container">
     <div class="projects-row">
       {% for item in paginator.posts %}
       <article
