Use light btn style on SD down btn

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -34,7 +34,7 @@ preload: hero-service-design.svg
             href="#why-service-design"
             role="button"
           >
-            <i class="fas fa-chevron-circle-down"></i>
+            <i class="fal fa-chevron-circle-down"></i>
           </a>
         </div>
       </div>
