--- a/pages/about.html
+++ b/pages/about.html
@@ -108,7 +108,8 @@ preload: hero-about-us.svg
 
       <p>
         You can also follow along on
-        <a href="{{site.twitter_url}}">Twitter @skylight_hq</a>.
+        <a href="{{site.twitter_url}}">Twitter</a> or 
+        <a href="{{site.linkedin_url}}">LinkedIn</a>.
       </p>
 
       <p>
