Ensure about page links are styled

--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@ preload: hero-about-us.svg
 <div class="about-us">
 
   <section class="page-block">
-    <div class="about-info grid-container maxw-md">
+    <div class="about-info grid-container maxw-md text">
       <h2 class="margin-heading text-center">Our story</h2>
       <p>
         Skylight was launched in June of 2017. We’re currently made up of 55 people and
@@ -90,7 +90,7 @@ preload: hero-about-us.svg
   {% endif %}
 
   <section class="page-block">
-    <div class="about-info">
+    <div class="about-info text">
       <h2>Always at your service</h2>
       <p>
         If you have a question for us, or would just like to get in touch, drop us a message
@@ -108,8 +108,8 @@ preload: hero-about-us.svg
 
       <p>
         You can also follow along on
-        <a href="{{site.twitter_url}}">Twitter</a>, 
-        <a href="{{site.linkedin_url}}">LinkedIn</a>, or 
+        <a href="{{site.twitter_url}}">Twitter</a>,
+        <a href="{{site.linkedin_url}}">LinkedIn</a>, or
         <a href="{{site.youtube_url}}">YouTube</a>.
       </p>
 
