--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -421,136 +421,138 @@ class_2_spots:
           responses:
         </p>
 
-        {% capture accordion_body %}
-        <p>
-          All in-person classroom sessions will be held virtually if COVID-19
-          continues to present any public-health risks.
-        </p>
-        {% endcapture %} {% include accordion.html accordion_header = 'How will
-        in-person classroom training be handled during COVID-19?' accordion_body
-        = accordion_body accordion_index = '0' %} {% capture accordion_body %}
-        <p>
-          The U.S. Digital Service and the Office of Federal Procurement Policy
-          launched the DITAP program in order to increase the development of
-          digital acquisition experts across government. By 2022, all federal
-          acquisition professionals managing contracts of $7M or more will
-          require
-          <a
-            href="https://www.fai.gov/announcements/new-fac-specialization-focuses-digital-services"
-            >FAC-C-DS certification</a
-          >. This certification can be obtained by completing our accredited
-          DITAP training course, led by experts who pioneered the field as
-          former members of 18F and the U.S. Digital Service.
-        </p>
-        {% endcapture %} {% include accordion.html accordion_header = 'Where did
-        DITAP come from?' accordion_body = accordion_body accordion_index = '1'
-        %} {% capture accordion_body %}
-        <p>
-          DITAP training isn’t just for contracting professionals seeking
-          certification. Our training is for anyone who plays a role in the
-          lifecycle of an acquisition, and wants to learn how to transform
-          acquisition outcomes through digital acquisition methods. So whether
-          you’re a finance officer, legal counsellor, procurement officer,
-          program manager, or technical manager, you’ll benefit greatly from
-          this training.
-        </p>
-        {% endcapture %} {% include accordion.html accordion_header = 'Is this
-        course for someone like me?' accordion_body = accordion_body
-        accordion_index = '2' %} {% capture accordion_body %}
-        <ul>
-          <li>
-            12 full days of mandatory classroom instruction consisting of three
-            separate, three-day in-person sessions.
-          </li>
-          <li>15 hours of virtual, instructor-led training.</li>
-          <li>
-            12 hours per week of asynchronous, self-paced learning (e.g.,
-            reading articles, participating in online discussions, contributing
-            to work activities, and working on assignments).
-          </li>
-        </ul>
-        {% endcapture %} {% include accordion.html accordion_header = 'What’s
-        the expected workload?' accordion_body = accordion_body accordion_index
-        = '3' %} {% capture accordion_body %}
-        <ul>
-          <li>6 months of digital acquisition training.</li>
-          <li>
-            Access to all course materials and our online learning platform.
-          </li>
-          <li>
-            Access to our training team, who will be available for 1-on-1
-            sessions during non-classroom hours.
-          </li>
-          <li>Collaboration and networking opportunities.</li>
-          <li>
-            While most of the program can be completely remotely, travel for the
-            in-person classroom session isn’t included.
-          </li>
-        </ul>
-        {% endcapture %} {% include accordion.html accordion_header = 'What does
-        my tuition cover?' accordion_body = accordion_body accordion_index = '4'
-        %} {% capture accordion_body %}
-        <ul>
-          <li>
-            Federal Acquisition Certification in Contracting Core-Plus
-            Specialization in Digital Services (<a
+        <section>
+          {% capture accordion_body %}
+          <p>
+            All in-person classroom sessions will be held virtually if COVID-19
+            continues to present any public-health risks.
+          </p>
+          {% endcapture %} {% include accordion.html accordion_header = 'How will
+          in-person classroom training be handled during COVID-19?' accordion_body
+          = accordion_body accordion_index = '0' %} {% capture accordion_body %}
+          <p>
+            The U.S. Digital Service and the Office of Federal Procurement Policy
+            launched the DITAP program in order to increase the development of
+            digital acquisition experts across government. By 2022, all federal
+            acquisition professionals managing contracts of $7M or more will
+            require
+            <a
               href="https://www.fai.gov/announcements/new-fac-specialization-focuses-digital-services"
-              >FAC-C-DS</a
-            >).
-          </li>
-          <li>
-            Up to 80 Continuous Learning Points, or CLPs, based on your level of
-            achievement in the program.
-          </li>
-        </ul>
-        {% endcapture %} {% include accordion.html accordion_header = 'What do I
-        earn for successfully completing the course?' accordion_body =
-        accordion_body accordion_index = '5' %} {% capture accordion_body %}
-        <p>
-          Level II or Level III FAC-C certification is preferred, but not
-          required as long as you have the requisite acquisition skills and
-          knowledge to complete the program.
-        </p>
-        {% endcapture %} {% include accordion.html accordion_header = 'What are
-        the prerequisites for taking this course?' accordion_body =
-        accordion_body accordion_index = '6' %} {% capture accordion_body %}
-        <ul>
-          <li>
-            Fellow acquisition professionals who are as passionate about
-            changing procurement outcomes as you are.
-          </li>
-          <li>Future collaborators and friends.</li>
-        </ul>
+              >FAC-C-DS certification</a
+            >. This certification can be obtained by completing our accredited
+            DITAP training course, led by experts who pioneered the field as
+            former members of 18F and the U.S. Digital Service.
+          </p>
+          {% endcapture %} {% include accordion.html accordion_header = 'Where did
+          DITAP come from?' accordion_body = accordion_body accordion_index = '1'
+          %} {% capture accordion_body %}
+          <p>
+            DITAP training isn’t just for contracting professionals seeking
+            certification. Our training is for anyone who plays a role in the
+            lifecycle of an acquisition, and wants to learn how to transform
+            acquisition outcomes through digital acquisition methods. So whether
+            you’re a finance officer, legal counsellor, procurement officer,
+            program manager, or technical manager, you’ll benefit greatly from
+            this training.
+          </p>
+          {% endcapture %} {% include accordion.html accordion_header = 'Is this
+          course for someone like me?' accordion_body = accordion_body
+          accordion_index = '2' %} {% capture accordion_body %}
+          <ul>
+            <li>
+              12 full days of mandatory classroom instruction consisting of three
+              separate, three-day in-person sessions.
+            </li>
+            <li>15 hours of virtual, instructor-led training.</li>
+            <li>
+              12 hours per week of asynchronous, self-paced learning (e.g.,
+              reading articles, participating in online discussions, contributing
+              to work activities, and working on assignments).
+            </li>
+          </ul>
+          {% endcapture %} {% include accordion.html accordion_header = 'What’s
+          the expected workload?' accordion_body = accordion_body accordion_index
+          = '3' %} {% capture accordion_body %}
+          <ul>
+            <li>6 months of digital acquisition training.</li>
+            <li>
+              Access to all course materials and our online learning platform.
+            </li>
+            <li>
+              Access to our training team, who will be available for 1-on-1
+              sessions during non-classroom hours.
+            </li>
+            <li>Collaboration and networking opportunities.</li>
+            <li>
+              While most of the program can be completely remotely, travel for the
+              in-person classroom session isn’t included.
+            </li>
+          </ul>
+          {% endcapture %} {% include accordion.html accordion_header = 'What does
+          my tuition cover?' accordion_body = accordion_body accordion_index = '4'
+          %} {% capture accordion_body %}
+          <ul>
+            <li>
+              Federal Acquisition Certification in Contracting Core-Plus
+              Specialization in Digital Services (<a
+                href="https://www.fai.gov/announcements/new-fac-specialization-focuses-digital-services"
+                >FAC-C-DS</a
+              >).
+            </li>
+            <li>
+              Up to 80 Continuous Learning Points, or CLPs, based on your level of
+              achievement in the program.
+            </li>
+          </ul>
+          {% endcapture %} {% include accordion.html accordion_header = 'What do I
+          earn for successfully completing the course?' accordion_body =
+          accordion_body accordion_index = '5' %} {% capture accordion_body %}
+          <p>
+            Level II or Level III FAC-C certification is preferred, but not
+            required as long as you have the requisite acquisition skills and
+            knowledge to complete the program.
+          </p>
+          {% endcapture %} {% include accordion.html accordion_header = 'What are
+          the prerequisites for taking this course?' accordion_body =
+          accordion_body accordion_index = '6' %} {% capture accordion_body %}
+          <ul>
+            <li>
+              Fellow acquisition professionals who are as passionate about
+              changing procurement outcomes as you are.
+            </li>
+            <li>Future collaborators and friends.</li>
+          </ul>
 
-        {% endcapture %} {% include accordion.html accordion_header = 'Who else
-        will be attending this course with me?' accordion_body = accordion_body
-        accordion_index = '7' %} {% capture accordion_body %}
-        <p>
-          Each course requires a minimum of 15 participants. The run dates are
-          contingent upon meeting this minimum.
-        </p>
-        {% endcapture %} {% include accordion.html accordion_header = 'Is the
-        course guaranteed to run if I sign up?' accordion_body = accordion_body
-        accordion_index = '8' %} {% capture accordion_body %}
-        <ul>
-          <li>
-            You can submit a cancellation request 30 business days or more prior
-            to the start of the course and receive a full refund.
-          </li>
-          <li>
-            If you submit a cancellation request fewer than 10 business days
-            prior to the start of the course, you’ll be issued a credit toward a
-            future Skylight training course. The credit will be equal to the
-            amount paid for the initial course less any applicable fees.
-          </li>
-          <li>
-            Should Skylight cancel the course for any reason, you’ll be refunded
-            100% of the registration cost.
-          </li>
-        </ul>
-        {% endcapture %} {% include accordion.html accordion_header = "What’s
-        the cancellation policy?" accordion_body = accordion_body
-        accordion_index = '9' %}
+          {% endcapture %} {% include accordion.html accordion_header = 'Who else
+          will be attending this course with me?' accordion_body = accordion_body
+          accordion_index = '7' %} {% capture accordion_body %}
+          <p>
+            Each course requires a minimum of 15 participants. The run dates are
+            contingent upon meeting this minimum.
+          </p>
+          {% endcapture %} {% include accordion.html accordion_header = 'Is the
+          course guaranteed to run if I sign up?' accordion_body = accordion_body
+          accordion_index = '8' %} {% capture accordion_body %}
+          <ul>
+            <li>
+              You can submit a cancellation request 30 business days or more prior
+              to the start of the course and receive a full refund.
+            </li>
+            <li>
+              If you submit a cancellation request fewer than 10 business days
+              prior to the start of the course, you’ll be issued a credit toward a
+              future Skylight training course. The credit will be equal to the
+              amount paid for the initial course less any applicable fees.
+            </li>
+            <li>
+              Should Skylight cancel the course for any reason, you’ll be refunded
+              100% of the registration cost.
+            </li>
+          </ul>
+          {% endcapture %} {% include accordion.html accordion_header = "What’s
+          the cancellation policy?" accordion_body = accordion_body
+          accordion_index = '9' %}
+        </section>
       </div>
     </div>
   </div>
