--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -412,129 +412,131 @@ class_2_spots:
           responses:
         </p>
 
-        {% capture accordion_body %}
-        <p>
-          The U.S. Digital Service and the Office of Federal Procurement Policy
-          launched the DITAP program in order to increase the development of
-          digital acquisition experts across government. By 2022, all federal
-          acquisition professionals managing contracts of $7M or more will
-          require
-          <a
-            href="https://www.fai.gov/announcements/new-fac-specialization-focuses-digital-services"
-            >FAC-C-DS certification</a
-          >. This certification can be obtained by completing our
-          <a href="/work/services/training/ditap/"
-            >accredited DITAP training course</a
-          >, led by experts who pioneered the field as former members of 18F and
-          the U.S. Digital Service.
-        </p>
-        {% endcapture %} {% include accordion.html accordion_header = 'Where did
-        DITAP come from?' accordion_body = accordion_body accordion_index = '1'
-        %} {% capture accordion_body %}
-        <p>
-          To achieve mission success in today’s digital world, agencies must
-          master the art of digital acquisition. Leaders arguably play the most
-          important role in making this transition happen, but need to manage
-          their time carefully. We’ve taken the core elements from our longer,
-          6-month DITAP course and distilled it into an executive-level,
-          crash-course summary &mdash; perfect for those who need a learning
-          experience that gets right to the point.
-        </p>
-        {% endcapture %} {% include accordion.html accordion_header = 'Why make
-        a condensed DITAP course for executives?' accordion_body =
-        accordion_body accordion_index = '2' %} {% capture accordion_body %}
-        <p>
-          This course is designed primarily for agency leaders and executives
-          who need a "Cliff Notes" version of our longer, more in-depth DITAP
-          course. But that's not to say this course is only for executives.
-          Anyone plays a role in the lifecycle of an acquisition (for example,
-          finance officer, legal counsellor, procurement officer, program
-          manager, or technical manager) and needs a crash-course tour of modern
-          digital acquisition will benefit greatly from this training.
-        </p>
-        {% endcapture %} {% include accordion.html accordion_header = 'Is this
-        course for someone like me?' accordion_body = accordion_body
-        accordion_index = '3' %} {% capture accordion_body %}
-        <p>
-          None! Any amount of familiarity with modern practices and technologies
-          will be helpful, but this course is designed to give you an
-          introduction to the fundamentals of modern digital acquisition. As
-          such, we don’t assume you come in with any more knowledge than maybe
-          hearing the word "agile" a couple times.
-        </p>
-        {% endcapture %} {% include accordion.html accordion_header = 'What are
-        the prerequisites for taking this course?' accordion_body =
-        accordion_body accordion_index = '4' %} {% capture accordion_body %}
-        <p>
-          Our default method of administering this course is remote. After you
-          register, you’ll be given a Zoom weblink to join the meeting. We
-          recommend that you download the Zoom web-based application prior to
-          joining class.
-        </p>
-        <p>
-          Remote course delivery isn’t the only option, however. While we’ve
-          designed the course to be virtual so that anyone, anywhere can sign up
-          to learn about digital acquisition, we love to administer in-person
-          training, too. If you’d like to schedule an in-person training for
-          your organization, please
-          <a href="mailto:training@skylight.digital">reach out to us</a>.
-        </p>
-        {% endcapture %} {% include accordion.html accordion_header = 'How is
-        this course delivered?' accordion_body = accordion_body accordion_index
-        = '5' %} {% capture accordion_body %}
-        <ul>
-          <li>Access to all course materials.</li>
-          <li>Course certificate of completion.</li>
-        </ul>
-        {% endcapture %} {% include accordion.html accordion_header = 'What does
-        the cost of registration include?' accordion_body = accordion_body
-        accordion_index = '6' %} {% capture accordion_body %}
-        <p>No.</p>
-        {% endcapture %} {% include accordion.html accordion_header = 'Will I
-        receive continuing education units?' accordion_body = accordion_body
-        accordion_index = '7' %} {% capture accordion_body %}
-        <ul>
-          <li>
-            Other agency leaders, like you, who want a fast, concise delivery of
-            the core elements of modern digital acquisition.
-          </li>
-          <li>
-            Fellow acquisition professionals who are as passionate about
-            changing procurement outcomes as you are.
-          </li>
-          <li>Future collaborators and friends.</li>
-        </ul>
+        <section>
+          {% capture accordion_body %}
+          <p>
+            The U.S. Digital Service and the Office of Federal Procurement Policy
+            launched the DITAP program in order to increase the development of
+            digital acquisition experts across government. By 2022, all federal
+            acquisition professionals managing contracts of $7M or more will
+            require
+            <a
+              href="https://www.fai.gov/announcements/new-fac-specialization-focuses-digital-services"
+              >FAC-C-DS certification</a
+            >. This certification can be obtained by completing our
+            <a href="/work/services/training/ditap/"
+              >accredited DITAP training course</a
+            >, led by experts who pioneered the field as former members of 18F and
+            the U.S. Digital Service.
+          </p>
+          {% endcapture %} {% include accordion.html accordion_header = 'Where did
+          DITAP come from?' accordion_body = accordion_body accordion_index = '1'
+          %} {% capture accordion_body %}
+          <p>
+            To achieve mission success in today’s digital world, agencies must
+            master the art of digital acquisition. Leaders arguably play the most
+            important role in making this transition happen, but need to manage
+            their time carefully. We’ve taken the core elements from our longer,
+            6-month DITAP course and distilled it into an executive-level,
+            crash-course summary &mdash; perfect for those who need a learning
+            experience that gets right to the point.
+          </p>
+          {% endcapture %} {% include accordion.html accordion_header = 'Why make
+          a condensed DITAP course for executives?' accordion_body =
+          accordion_body accordion_index = '2' %} {% capture accordion_body %}
+          <p>
+            This course is designed primarily for agency leaders and executives
+            who need a "Cliff Notes" version of our longer, more in-depth DITAP
+            course. But that's not to say this course is only for executives.
+            Anyone plays a role in the lifecycle of an acquisition (for example,
+            finance officer, legal counsellor, procurement officer, program
+            manager, or technical manager) and needs a crash-course tour of modern
+            digital acquisition will benefit greatly from this training.
+          </p>
+          {% endcapture %} {% include accordion.html accordion_header = 'Is this
+          course for someone like me?' accordion_body = accordion_body
+          accordion_index = '3' %} {% capture accordion_body %}
+          <p>
+            None! Any amount of familiarity with modern practices and technologies
+            will be helpful, but this course is designed to give you an
+            introduction to the fundamentals of modern digital acquisition. As
+            such, we don’t assume you come in with any more knowledge than maybe
+            hearing the word "agile" a couple times.
+          </p>
+          {% endcapture %} {% include accordion.html accordion_header = 'What are
+          the prerequisites for taking this course?' accordion_body =
+          accordion_body accordion_index = '4' %} {% capture accordion_body %}
+          <p>
+            Our default method of administering this course is remote. After you
+            register, you’ll be given a Zoom weblink to join the meeting. We
+            recommend that you download the Zoom web-based application prior to
+            joining class.
+          </p>
+          <p>
+            Remote course delivery isn’t the only option, however. While we’ve
+            designed the course to be virtual so that anyone, anywhere can sign up
+            to learn about digital acquisition, we love to administer in-person
+            training, too. If you’d like to schedule an in-person training for
+            your organization, please
+            <a href="mailto:training@skylight.digital">reach out to us</a>.
+          </p>
+          {% endcapture %} {% include accordion.html accordion_header = 'How is
+          this course delivered?' accordion_body = accordion_body accordion_index
+          = '5' %} {% capture accordion_body %}
+          <ul>
+            <li>Access to all course materials.</li>
+            <li>Course certificate of completion.</li>
+          </ul>
+          {% endcapture %} {% include accordion.html accordion_header = 'What does
+          the cost of registration include?' accordion_body = accordion_body
+          accordion_index = '6' %} {% capture accordion_body %}
+          <p>No.</p>
+          {% endcapture %} {% include accordion.html accordion_header = 'Will I
+          receive continuing education units?' accordion_body = accordion_body
+          accordion_index = '7' %} {% capture accordion_body %}
+          <ul>
+            <li>
+              Other agency leaders, like you, who want a fast, concise delivery of
+              the core elements of modern digital acquisition.
+            </li>
+            <li>
+              Fellow acquisition professionals who are as passionate about
+              changing procurement outcomes as you are.
+            </li>
+            <li>Future collaborators and friends.</li>
+          </ul>
 
-        {% endcapture %} {% include accordion.html accordion_header = 'Who else
-        will be attending this course with me?' accordion_body = accordion_body
-        accordion_index = '8' %} {% capture accordion_body %}
-        <p>
-          Each course requires a minimum of 15 participants. The run dates are
-          contingent upon meeting this minimum. You’ll be refunded 100% of the
-          registration cost in the event that we cancel the course.
-        </p>
-        {% endcapture %} {% include accordion.html accordion_header = 'Is the
-        course guaranteed to run if I sign up?' accordion_body = accordion_body
-        accordion_index = '9' %} {% capture accordion_body %}
-        <ul>
-          <li>
-            You can submit a cancellation request 10 business days or more prior
-            to the start of the course and receive a full refund.
-          </li>
-          <li>
-            If you submit a cancellation request fewer than 10 business days
-            prior to the start of the course, you’ll be issued a credit toward a
-            future Skylight training course. The credit will be equal to the
-            amount paid for the initial course less any applicable fees.
-          </li>
-          <li>
-            Should Skylight cancel the course for any reason, you’ll be refunded
-            100% of the registration cost.
-          </li>
-        </ul>
-        {% endcapture %} {% include accordion.html accordion_header = "What’s
-        the cancellation policy?" accordion_body = accordion_body
-        accordion_index = '10' %}
+          {% endcapture %} {% include accordion.html accordion_header = 'Who else
+          will be attending this course with me?' accordion_body = accordion_body
+          accordion_index = '8' %} {% capture accordion_body %}
+          <p>
+            Each course requires a minimum of 15 participants. The run dates are
+            contingent upon meeting this minimum. You’ll be refunded 100% of the
+            registration cost in the event that we cancel the course.
+          </p>
+          {% endcapture %} {% include accordion.html accordion_header = 'Is the
+          course guaranteed to run if I sign up?' accordion_body = accordion_body
+          accordion_index = '9' %} {% capture accordion_body %}
+          <ul>
+            <li>
+              You can submit a cancellation request 10 business days or more prior
+              to the start of the course and receive a full refund.
+            </li>
+            <li>
+              If you submit a cancellation request fewer than 10 business days
+              prior to the start of the course, you’ll be issued a credit toward a
+              future Skylight training course. The credit will be equal to the
+              amount paid for the initial course less any applicable fees.
+            </li>
+            <li>
+              Should Skylight cancel the course for any reason, you’ll be refunded
+              100% of the registration cost.
+            </li>
+          </ul>
+          {% endcapture %} {% include accordion.html accordion_header = "What’s
+          the cancellation policy?" accordion_body = accordion_body
+          accordion_index = '10' %}
+        </section>
       </div>
     </div>
   </div>
