re-add missing b tag

--- a/pages/join.html
+++ b/pages/join.html
@@ -107,7 +107,7 @@ preload: hero-join-us.svg
               can make the biggest impact.”
             </p>
 
-            <p class="join-quote__byline">— Laura King,</b> UX Designer</p>
+            <p class="join-quote__byline"><b>— Laura King,</b> UX Designer</p>
           </div>
         </div>
 
