--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -3,6 +3,9 @@ layout: default
 title: Toolkits
 permalink: /work/toolkits/
 preload: hero-toolkits.svg
+excerpt: Tools and resources that we use at Skylight to help us and our clients deliver better public services.
+image: /img/toolkits/toolkits-social.png
+image_description: Banner of Skylight's Toolkits.
 ---
 
 {% include hero_banner.html
