--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -5,7 +5,7 @@ permalink: /work/toolkits/
 preload: hero-toolkits.svg
 excerpt: Tools and resources that we use at Skylight to help us and our clients deliver better public services.
 image: /img/toolkits/toolkits-social.png
-image_description: Banner of Skylight's Toolkits.
+image_description: A collection of different tools.
 ---
 
 {% include hero_banner.html
