Add see all link to bottom of training pages

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -461,6 +461,9 @@ class_2_spots:
           accordion_index = '9' %}
         </section>
       </div>
+      <a class="post-footer__see-all border-0" href="/work/services/training/">
+        <i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i>See all trainings
+      </a>
     </div>
   </div>
 </div>
