--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -448,6 +448,9 @@ class_2_spots:
           accordion_index = '10' %}
         </section>
       </div>
+      <a class="post-footer__see-all border-0" href="/work/services/training/">
+        <i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i>See all trainings
+      </a>
     </div>
   </div>
 </div>
