edit ditap file names

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -7,7 +7,7 @@ redirect_from:
   - /services/ditap/apply/
   - /work/services/training/ditap/apply/
 excerpt: Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course.
-image: /img/ditap/ditap-banner.png
+image: /img/ditap/ditap-social.png
 image_description: Banner of Skylight’s Digital IT Acquisition Professional Training course.
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
