--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -4,7 +4,7 @@ title: Toolkits
 permalink: /work/toolkits/
 preload: hero-toolkits.svg
 excerpt: Tools and resources that we use at Skylight to help us and our clients deliver better public services.
-image: /img/toolkits/toolkits-social.png
+image: /img/toolkits-social.png
 image_description: A collection of different tools.
 ---
 
