--- a/pages/training.html
+++ b/pages/training.html
@@ -3,6 +3,8 @@ layout: default
 title: Training
 permalink: /work/services/training/
 preload: hero-training.svg
+image: /img/training-social.png
+image_description: Skylight training banner showing various educational-related objects such as a book.
 ---
 
 {% include hero_banner.html
