--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -449,7 +449,7 @@ class_2_spots:
         </section>
       </div>
       <a class="post-footer__see-all border-0" href="/work/services/training/">
-        <i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i>See all trainings
+        <i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i>See all training courses
       </a>
     </div>
   </div>
