--- a/pages/services.html
+++ b/pages/services.html
@@ -20,7 +20,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
     <div class="grid-container prose">
       <div class="row pt-3">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
-          <h2>Service Delivery</h2>
+          <h2>Service delivery</h2>
           <p>
             <b
               >Today’s public expects their interactions with the government to
