--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -143,8 +143,8 @@ image_description: Skylight toolkits banner showing a collection of different to
     <p>
       These toolkits are managed by our Communities of Practice. Communities are
       organized groups within Skylight who are passionate about developing and
-      sharing our expertise with the world. We currently have eight communities
-      of practice. These include: Research & Design, Product & Delivery,
+      sharing our expertise with the world. We currently have eight Communities
+      of Practice. These include: Research & Design, Product & Delivery,
       Engineering, Data, Procurement, Transformation, Accessibility, and
       Internet of Things.
     </p>
