Update to curly quote

--- a/pages/services.html
+++ b/pages/services.html
@@ -142,7 +142,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
           <h2>Transformation</h2>
           <p>
-            <b>"Going digital" is about people first and technology second.</b>
+            <b>“Going digital” is about people first and technology second.</b>
             We possess first-hand experience with embedding digital expertise
             throughout government organizations, and putting the operating
             principles, structures, and tools in place to unleash the
