--- a/pages/services.html
+++ b/pages/services.html
@@ -209,8 +209,8 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
             Our microconsulting services are designed specifically for that
             purpose, providing you with on-demand access to our expertise.
             They’re also conveniently priced within the government’s
-            micropurchase threshold, which makes engaging with us just a "swipe
-            of the credit card away."
+            micropurchase threshold, which makes engaging with us just a “swipe
+            of the credit card away.”
           </p>
           <a class="btn btn-primary font-weight-bold" href="{{ page.cta }}"
             >Engage now</a
