Updated title to title case

--- a/pages/services.html
+++ b/pages/services.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Our services
+title: Our Services
 permalink: /work/services/
 redirect_from:
   - /services/digital-procurement/
