Updated title to title case

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Service design: Transforming user experiences"
+title: "Service Design: Transforming User Experiences"
 permalink: /work/services/service-design/
 excerpt: Learn what service design can do for you and how Skylight can help you use it to deliver greater public value.
 image: /img/ditap/ditap-banner.png
