updating toolkit titles to sentence case

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -36,7 +36,7 @@ image_description: Skylight toolkits banner showing a collection of different to
         >
           <div class="blog-post-block">
             <h2 class="blog-post-title">
-              Digital Talent Management Handbook
+              Digital talent management handbook
             </h2>
             <p class="card-text blog-post-text">
               {{ site.data.toolkits.digital_talent_management.description }}
@@ -58,7 +58,7 @@ image_description: Skylight toolkits banner showing a collection of different to
         >
           <div class="blog-post-block">
             <h2 class="blog-post-title">
-              Data Sharing Playbook
+              Data sharing playbook
             </h2>
             <p class="card-text blog-post-text">
               {{ site.data.toolkits.data_sharing_playbook.description }}
@@ -80,7 +80,7 @@ image_description: Skylight toolkits banner showing a collection of different to
         >
           <div class="blog-post-block">
             <h2 class="blog-post-title">
-              Accessibility Guide
+              Accessibility guide
             </h2>
             <p class="card-text blog-post-text">
               {{ site.data.toolkits.accessibility_guide.description }}
@@ -102,7 +102,7 @@ image_description: Skylight toolkits banner showing a collection of different to
         >
           <div class="blog-post-block">
             <h2 class="blog-post-title">
-              Agile Procurement Playbook
+              Agile procurement playbook
             </h2>
             <p class="card-text blog-post-text">
               {{ site.data.toolkits.agile_procurement_playbook.description }}
@@ -124,7 +124,7 @@ image_description: Skylight toolkits banner showing a collection of different to
         >
           <div class="blog-post-block">
             <h2 class="blog-post-title">
-              Managing Technical Debt Guide
+              Managing technical debt guide
             </h2>
             <p class="card-text blog-post-text">
               {{ site.data.toolkits.managing_technical_debt.description }}
