changed titles to sentence case

--- a/pages/training.html
+++ b/pages/training.html
@@ -24,7 +24,7 @@ image_description: Skylight training banner showing various educational-related 
         >
           <div class="blog-post-block">
             <h2 class="blog-post-title">
-              Digital IT Acquisition Professional (DITAP) Training
+              Digital IT Acquisition Professional (DITAP) training
             </h2>
             <p class="card-text blog-post-text">
               Become a certified digial acquisition professional through our
@@ -47,8 +47,8 @@ image_description: Skylight training banner showing various educational-related 
         >
           <div class="blog-post-block">
             <h2 class="blog-post-title">
-              Digital IT Acquisition Professional (DITAP) Training &mdash;
-              Executive Edition
+              Digital IT Acquisition Professional (DITAP) training &mdash;
+              executive edition
             </h2>
             <p class="card-text blog-post-text">
               Learn how to lead your agency into the world of modern procurement 
