changing title to sentence case

--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Digital IT Acquisition Professional (DITAP) Training &mdash; Executive Edition"
+title: "Digital IT Acquisition Professional (DITAP) training &mdash; executive edition"
 permalink: /work/services/training/ditap-executive/
 excerpt: Learn how to transform the way your agency procures modern technology products and services through a condensed, 1-day version of our 6-month DITAP training program.
 image: /img/ditap_executive/ditap-executive-social.png
