Add social share to toolkits page

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -3,6 +3,9 @@ layout: default
 title: Toolkits
 permalink: /work/toolkits/
 preload: hero-toolkits.svg
+excerpt: Tools and resources that we use at Skylight to help us and our clients deliver better public services.
+image: /img/toolkits-social.png
+image_description: Skylight toolkits banner showing a collection of different tools.
 ---
 
 {% include hero_banner.html
