Add pullquote alt style

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -111,6 +111,7 @@ preload: hero-service-design.svg
                     environment in a city plan."
           cite_name = "Eero Saarinen"
           cite_title = "Architect"
+          class= "pullquote--alt"
         %}
         <h2 class="sd__heading" id="how-we-work">How we work</h2>
         <p>
