--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -264,7 +264,7 @@ class_2_spots:
           cite_title = "Former Centers for Medicare &
                     Medicaid Services Digital Service Contracting Advisor and Lead
                     Contracting Officer for the Quality Payment Program"
-          class = "mt-6"
+          class = "pullquote--alt mt-6"
         %}
 
         <h2 id="instructors">Meet your instructors</h2>
