--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -19,15 +19,14 @@ class_2_spots:
 <div
   class="bg-blue hero-banner"
   style="
-    background-image: url(/img/hero-training-single.svg);
+    background-image: url(/img/hero-ditap.svg);
     background-repeat: no-repeat;
-    background-size: cover;
   "
 >
   <div class="hero">
     <div class="container-lg hero-container container-fluid">
       <div class="row">
-        <div class="col-12 col-lg-7 mx-auto">
+        <div class="col-12 col-sm-10 col-md-9 col-lg-7 mx-auto">
           <h1 class="hero-heading">
             Digital IT Acquisition Professional (DITAP) training
           </h1>
