--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -15,15 +15,14 @@ class_2_spots:
 <div
   class="bg-blue hero-banner"
   style="
-    background-image: url(/img/hero-training-single.svg);
+    background-image: url(/img/hero-ditap-exec.svg);
     background-repeat: no-repeat;
-    background-size: cover;
   "
 >
   <div class="hero">
     <div class="container-lg hero-container container-fluid">
       <div class="row">
-        <div class="col-12 col-lg-7 mx-auto">
+        <div class="col-12 col-sm-10 col-md-9 col-lg-7 mx-auto">
           <h1 class="hero-heading">{{ page.title }}</h1>
           <p class="hero-content text-shadow">{{ page.excerpt }}</p>
           <div class="hero-btn-group mt-2">
