--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Digital IT Acquisition Professional (DITAP) training"
+title: "Digital IT Acquisition Professional (DITAP) Training"
 permalink: /work/services/training/ditap/
 redirect_from:
   - /services/ditap/
@@ -29,7 +29,7 @@ class_2_spots:
       <div class="row">
         <div class="col-12 col-lg-7 mx-auto">
           <h1 class="hero-heading">
-            Digital IT Acquisition Professional (DITAP) training
+            Digital IT Acquisition Professional (DITAP) Training
           </h1>
           <p class="hero-content text-shadow">
             Learn the skills required to master the art of digital acquisition
