--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: "Digital IT Acquisition Professional (DITAP) training &mdash; executive edition"
+title: Digital IT Acquisition Professional (DITAP) Training — Executive Edition
 permalink: /work/services/training/ditap-executive/
 excerpt: Learn how to transform the way your agency procures modern technology products and services through a condensed, 1-day version of our 6-month DITAP training program.
 image: /img/ditap_executive/ditap-executive-social.png
-image_description: Banner of the executive edition of Skylight’s Digital IT Acquisition Professional training course.
+image_description: Banner of Skylight’s Digital IT Acquisition Professional Training — Executive Edition course.
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
 preload: hero-training-single.svg
