change toolkit titles

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -36,7 +36,7 @@ image_description: Skylight toolkits banner showing a collection of different to
         >
           <div class="blog-post-block">
             <h2 class="blog-post-title">
-              Digital talent management handbook
+              Digital Talent Management Handbook
             </h2>
             <p class="card-text blog-post-text">
               {{ site.data.toolkits.digital_talent_management.description }}
@@ -58,7 +58,7 @@ image_description: Skylight toolkits banner showing a collection of different to
         >
           <div class="blog-post-block">
             <h2 class="blog-post-title">
-              Data sharing playbook
+              Data Sharing Playbook
             </h2>
             <p class="card-text blog-post-text">
               {{ site.data.toolkits.data_sharing_playbook.description }}
@@ -80,7 +80,7 @@ image_description: Skylight toolkits banner showing a collection of different to
         >
           <div class="blog-post-block">
             <h2 class="blog-post-title">
-              Accessibility guide
+              Accessibility Guide
             </h2>
             <p class="card-text blog-post-text">
               {{ site.data.toolkits.accessibility_guide.description }}
@@ -102,7 +102,7 @@ image_description: Skylight toolkits banner showing a collection of different to
         >
           <div class="blog-post-block">
             <h2 class="blog-post-title">
-              Agile procurement playbook
+              Agile Procurement Playbook
             </h2>
             <p class="card-text blog-post-text">
               {{ site.data.toolkits.agile_procurement_playbook.description }}
@@ -124,7 +124,7 @@ image_description: Skylight toolkits banner showing a collection of different to
         >
           <div class="blog-post-block">
             <h2 class="blog-post-title">
-              Managing technical debt guide
+              Managing Technical Debt Guide
             </h2>
             <p class="card-text blog-post-text">
               {{ site.data.toolkits.managing_technical_debt.description }}
