Update hero banners, globe

--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -7,7 +7,7 @@ image: /img/ditap_executive/ditap-executive-social.png
 image_description: Banner of Skylight’s Digital IT Acquisition Professional Training — Executive Edition course.
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
-preload: hero-training-single.svg
+preload: hero-ditap-exec.svg
 class_1_spots:
 class_2_spots:
 ---
