--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -11,7 +11,7 @@ image: /img/ditap/ditap-social.png
 image_description: Banner of Skylight’s Digital IT Acquisition Professional Training course.
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
-preload: hero-training-single.svg
+preload: hero-ditap.svg
 class_1_spots:
 class_2_spots:
 ---
