Constrain SD hero to old size

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -15,6 +15,7 @@ preload: hero-service-design.svg
   style="
     background-image: url(/img/hero-service-design.svg);
     background-repeat: no-repeat;
+    background-size: 1140px;
   "
 >
   <div class="hero">
