Update service design hero background at mobile

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -10,14 +10,7 @@ class: ditap page-service-design
 preload: hero-service-design.svg
 ---
 
-<div
-  class="bg-primary hero-banner"
-  style="
-    background-image: url(/img/hero-service-design.svg);
-    background-repeat: no-repeat;
-    background-size: 1140px;
-  "
->
+<div class="bg-primary hero-banner">
   <div class="hero">
     <div class="hero-container grid-container">
       <div class="">
@@ -30,7 +23,7 @@ preload: hero-service-design.svg
             you use it to deliver greater public value.
           </p>
           <a
-            class="text-white d-inline-block mt-1"
+            class="text-white d-inline-block"
             href="#why-service-design"
             role="button"
           >
