--- a/pages/join.html
+++ b/pages/join.html
@@ -122,10 +122,8 @@ preload: hero-join-us.svg
             {% include icons/join/compensation.svg %}
             <h3>Compensation</h3>
             <p>
-              We offer a competitive salary, a stake in the company’s success with stock
-              options regardless of role, performance rewards, referral bonuses,
-              a quick-pay program, and <a href="https://maps.certify.sba.gov/hubzone/map#center=39.828200,-98.579500&zoom=5">HUBZone</a>
-              resident stipends.
+              We offer a competitive salary, opportunities for a stake in the company’s success with stock
+              options, performance rewards, referral bonuses, and a quick-pay program.
             </p>
           </div>
 
